src-errormsg/E21-WrongPreludeFunction/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E21-WrongPreludeFunction/Plinth.hs:15:15: error: [GHC-88464]
    Variable not in scope: length :: List Integer -> Integer
   |
15 | myLength xs = length xs
   |               ^^^^^^
